--- a/binutils-2.23.2/gold/testsuite/Makefile.in
+++ b/binutils-2.23.2/gold/testsuite/Makefile.in
@@ -1880,6 +1880,7 @@ CYGPATH_W = @CYGPATH_W@
 DATADIRNAME = @DATADIRNAME@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
+DLOPEN_LIBS = @DLOPEN_LIBS@
 ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
